pkg/v2/parser/y.output

state 0
	$accept: .start $end 

	error  shift 3
	START_STMTS  shift 2
	.  error

	start  goto 1

state 1
	$accept:  start.$end 
	start:  start.EOF 

	$end  accept
	EOF  shift 4
	.  error


state 2
	start:  START_STMTS.stmts 
	start:  START_STMTS.    (6)

	SEMICOLON  shift 21
	ID  shift 49
	NUMBER  shift 51
	LEFT_PAREN  shift 62
	LEFT_BRACKET  shift 58
	LEFT_BRACE  shift 59
	STRING  shift 54
	QUOTED_STRING  shift 50
	MULTILINE_STRING  shift 55
	EOL  shift 22
	ADD  shift 63
	SUB  shift 64
	NOT  shift 65
	DOT  shift 66
	TRUE  shift 52
	FALSE  shift 53
	NIL  shift 56
	NULL  shift 57
	IF  shift 48
	MAP  shift 67
	FOR  shift 24
	BREAK  shift 26
	CONTINUE  shift 25
	RETURN  shift 32
	FN  shift 29
	LET  shift 28
	IMPORT  shift 30
	TYPE  shift 31
	.  reduce 6 (src line 170)

	stmts  goto 5
	stmts_list  goto 6
	if_elem  goto 33
	if_elif_list  goto 23
	stmt  goto 7
	for_in_stmt  goto 10
	for_stmt  goto 11
	continue_stmt  goto 12
	break_stmt  goto 13
	ifelse_stmt  goto 9
	call_expr  goto 47
	identifier  goto 34
	unary_expr  goto 40
	conditional_expr  goto 41
	arithmeticExpr  goto 42
	paren_expr  goto 39
	index_expr  goto 44
	attr_expr  goto 43
	in_expr  goto 46
	expr  goto 27
	map_literal  goto 37
	value_stmt  goto 14
	typed_literal  goto 38
	list_literal  goto 36
	basic_literal  goto 35
	slice_expr  goto 45
	list_type  goto 60
	map_type  goto 61
	var_def_stmt  goto 15
	method_def_stmt  goto 17
	fn_def_stmt  goto 16
	import_stmt  goto 18
	type_def_stmt  goto 19
	return_stmt  goto 20
	sep  goto 8

state 3
	start:  error.    (8)

	.  reduce 8 (src line 175)


state 4
	start:  start EOF.    (7)

	.  reduce 7 (src line 174)


state 5
	start:  START_STMTS stmts.    (5)

	.  reduce 5 (src line 166)


state 6
	stmts:  stmts_list.stmt 
	stmts:  stmts_list.    (10)
	stmts_list:  stmts_list.stmt sep 

	ID  shift 49
	NUMBER  shift 51
	LEFT_PAREN  shift 62
	LEFT_BRACKET  shift 58
	LEFT_BRACE  shift 59
	STRING  shift 54
	QUOTED_STRING  shift 50
	MULTILINE_STRING  shift 55
	ADD  shift 63
	SUB  shift 64
	NOT  shift 65
	DOT  shift 66
	TRUE  shift 52
	FALSE  shift 53
	NIL  shift 56
	NULL  shift 57
	IF  shift 48
	MAP  shift 67
	FOR  shift 24
	BREAK  shift 26
	CONTINUE  shift 25
	RETURN  shift 32
	FN  shift 29
	LET  shift 28
	IMPORT  shift 30
	TYPE  shift 31
	.  reduce 10 (src line 191)

	if_elem  goto 33
	if_elif_list  goto 23
	stmt  goto 68
	for_in_stmt  goto 10
	for_stmt  goto 11
	continue_stmt  goto 12
	break_stmt  goto 13
	ifelse_stmt  goto 9
	call_expr  goto 47
	identifier  goto 34
	unary_expr  goto 40
	conditional_expr  goto 41
	arithmeticExpr  goto 42
	paren_expr  goto 39
	index_expr  goto 44
	attr_expr  goto 43
	in_expr  goto 46
	expr  goto 27
	map_literal  goto 37
	value_stmt  goto 14
	typed_literal  goto 38
	list_literal  goto 36
	basic_literal  goto 35
	slice_expr  goto 45
	list_type  goto 60
	map_type  goto 61
	var_def_stmt  goto 15
	method_def_stmt  goto 17
	fn_def_stmt  goto 16
	import_stmt  goto 18
	type_def_stmt  goto 19
	return_stmt  goto 20

state 7
	stmts:  stmt.    (11)
	stmts_list:  stmt.sep 

	SEMICOLON  shift 21
	EOL  shift 22
	.  reduce 11 (src line 192)

	sep  goto 69

state 8
	sep:  sep.SEMICOLON 
	sep:  sep.EOL 
	stmts_list:  sep.    (13)

	SEMICOLON  shift 70
	EOL  shift 71
	.  reduce 13 (src line 202)


state 9
	stmt:  ifelse_stmt.    (15)

	.  reduce 15 (src line 214)


state 10
	stmt:  for_in_stmt.    (16)

	.  reduce 16 (src line 215)


state 11
	stmt:  for_stmt.    (17)

	.  reduce 17 (src line 216)


state 12
	stmt:  continue_stmt.    (18)

	.  reduce 18 (src line 217)


state 13
	stmt:  break_stmt.    (19)

	.  reduce 19 (src line 218)


state 14
	stmt:  value_stmt.    (20)

	.  reduce 20 (src line 219)


state 15
	stmt:  var_def_stmt.    (21)

	.  reduce 21 (src line 220)


state 16
	stmt:  fn_def_stmt.    (22)

	.  reduce 22 (src line 221)


state 17
	stmt:  method_def_stmt.    (23)

	.  reduce 23 (src line 222)


state 18
	stmt:  import_stmt.    (24)

	.  reduce 24 (src line 223)


state 19
	stmt:  type_def_stmt.    (25)

	.  reduce 25 (src line 224)


state 20
	stmt:  return_stmt.    (26)

	.  reduce 26 (src line 225)


state 21
	sep:  SEMICOLON.    (1)

	.  reduce 1 (src line 160)


state 22
	sep:  EOL.    (2)

	.  reduce 2 (src line 161)


state 23
	ifelse_stmt:  if_elif_list.    (120)
	ifelse_stmt:  if_elif_list.ELSE stmt_block 
	if_elif_list:  if_elif_list.elif_elem 

	ELIF  shift 74
	ELSE  shift 72
	.  reduce 120 (src line 624)

	elif_elem  goto 73

state 24
	for_in_stmt:  FOR.in_expr stmt_block 
	for_stmt:  FOR.for_init_elem SEMICOLON expr SEMICOLON expr stmt_block 
	for_stmt:  FOR.for_init_elem SEMICOLON expr SEMICOLON stmt_block 
	for_stmt:  FOR.for_init_elem SEMICOLON SEMICOLON expr stmt_block 
	for_stmt:  FOR.for_init_elem SEMICOLON SEMICOLON stmt_block 
	for_stmt:  FOR.SEMICOLON expr SEMICOLON expr stmt_block 
	for_stmt:  FOR.SEMICOLON expr SEMICOLON stmt_block 
	for_stmt:  FOR.SEMICOLON SEMICOLON expr stmt_block 
	for_stmt:  FOR.SEMICOLON SEMICOLON stmt_block 

	SEMICOLON  shift 77
	ID  shift 49
	NUMBER  shift 51
	LEFT_PAREN  shift 62
	LEFT_BRACKET  shift 58
	LEFT_BRACE  shift 59
	STRING  shift 54
	QUOTED_STRING  shift 50
	MULTILINE_STRING  shift 55
	ADD  shift 63
	SUB  shift 64
	NOT  shift 65
	DOT  shift 66
	TRUE  shift 52
	FALSE  shift 53
	NIL  shift 56
	NULL  shift 57
	MAP  shift 67
	LET  shift 28
	.  error

	exprs  goto 81
	assignment_stmt  goto 79
	call_expr  goto 47
	identifier  goto 34
	unary_expr  goto 40
	conditional_expr  goto 41
	arithmeticExpr  goto 42
	paren_expr  goto 39
	index_expr  goto 44
	attr_expr  goto 43
	in_expr  goto 75
	expr  goto 78
	map_literal  goto 37
	typed_literal  goto 38
	list_literal  goto 36
	basic_literal  goto 35
	for_init_elem  goto 76
	slice_expr  goto 45
	list_type  goto 60
	map_type  goto 61
	var_def_stmt  goto 80

state 25
	continue_stmt:  CONTINUE.    (107)

	.  reduce 107 (src line 561)


state 26
	break_stmt:  BREAK.    (106)

	.  reduce 106 (src line 554)


state 27
	value_stmt:  expr.    (27)
	in_expr:  expr.IN expr 
	call_expr:  expr.LEFT_PAREN function_args RIGHT_PAREN 
	call_expr:  expr.LEFT_PAREN function_args COMMA RIGHT_PAREN 
	call_expr:  expr.LEFT_PAREN RIGHT_PAREN 
	conditional_expr:  expr.GTE expr 
	conditional_expr:  expr.GT expr 
	conditional_expr:  expr.OR expr 
	conditional_expr:  expr.AND expr 
	conditional_expr:  expr.LT expr 
	conditional_expr:  expr.LTE expr 
	conditional_expr:  expr.NEQ expr 
	conditional_expr:  expr.EQEQ expr 
	arithmeticExpr:  expr.ADD expr 
	arithmeticExpr:  expr.SUB expr 
	arithmeticExpr:  expr.MUL expr 
	arithmeticExpr:  expr.DIV expr 
	arithmeticExpr:  expr.MOD expr 
	index_expr:  expr.LEFT_BRACKET expr RIGHT_BRACKET 
	attr_expr:  expr.DOT expr 
	slice_expr:  expr.LEFT_BRACKET expr_or_empty COLON expr_or_empty COLON expr_or_empty RIGHT_BRACKET 
	slice_expr:  expr.LEFT_BRACKET expr_or_empty COLON expr_or_empty RIGHT_BRACKET 

	LEFT_PAREN  shift 83
	LEFT_BRACKET  shift 97
	ADD  shift 92
	SUB  shift 93
	MUL  shift 94
	DIV  shift 95
	MOD  shift 96
	GTE  shift 84
	GT  shift 85
	LT  shift 88
	LTE  shift 89
	NEQ  shift 90
	EQEQ  shift 91
	AND  shift 87
	OR  shift 86
	DOT  shift 98
	IN  shift 82
	.  reduce 27 (src line 229)


state 28
	var_def_stmt:  LET.identifier data_type EQ expr 
	var_def_stmt:  LET.identifier data_type 
	var_def_stmt:  LET.identifier EQ expr 

	ID  shift 49
	QUOTED_STRING  shift 50
	.  error

	identifier  goto 99

state 29
	method_def_stmt:  FN.LEFT_BRACE identifier identifier RIGHT_BRACE identifier LEFT_PAREN RIGHT_PAREN LEFT_BRACE RIGHT_BRACE stmt_block 
	method_def_stmt:  FN.LEFT_BRACE identifier identifier RIGHT_BRACE identifier LEFT_PAREN RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET data_type stmt_block 
	method_def_stmt:  FN.LEFT_BRACE identifier identifier RIGHT_BRACE identifier LEFT_PAREN RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET LEFT_PAREN fn_ret_types_multi RIGHT_PAREN stmt_block 
	method_def_stmt:  FN.LEFT_BRACE identifier identifier RIGHT_BRACE identifier LEFT_PAREN fn_def_params RIGHT_PAREN LEFT_BRACE RIGHT_BRACE stmt_block 
	method_def_stmt:  FN.LEFT_BRACE identifier identifier RIGHT_BRACE identifier LEFT_PAREN fn_def_params RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET data_type stmt_block 
	method_def_stmt:  FN.LEFT_BRACE identifier identifier RIGHT_BRACE identifier LEFT_PAREN fn_def_params RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET LEFT_PAREN fn_ret_types_multi RIGHT_PAREN stmt_block 
	fn_def_stmt:  FN.identifier LEFT_PAREN RIGHT_PAREN LEFT_BRACE RIGHT_BRACE stmt_block 
	fn_def_stmt:  FN.identifier LEFT_PAREN RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET data_type stmt_block 
	fn_def_stmt:  FN.identifier LEFT_PAREN RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET LEFT_PAREN fn_ret_types_multi RIGHT_PAREN stmt_block 
	fn_def_stmt:  FN.identifier LEFT_PAREN fn_def_params RIGHT_PAREN LEFT_BRACE RIGHT_BRACE stmt_block 
	fn_def_stmt:  FN.identifier LEFT_PAREN fn_def_params RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET data_type stmt_block 
	fn_def_stmt:  FN.identifier LEFT_PAREN fn_def_params RIGHT_PAREN LEFT_BRACE RIGHT_BRACE FN_RET LEFT_PAREN fn_ret_types_multi RIGHT_PAREN stmt_block 

	ID  shift 49
	LEFT_BRACE  shift 100
	QUOTED_STRING  shift 50
	.  error

	identifier  goto 101

state 30
	import_stmt:  IMPORT.STRING 
	import_stmt:  IMPORT.STRING AS identifier 

	STRING  shift 102
	.  error


state 31
	type_def_stmt:  TYPE.identifier data_type 

	ID  shift 49
	QUOTED_STRING  shift 50
	.  error

	identifier  goto 103

state 32
	return_stmt:  RETURN.    (79)
	return_stmt:  RETURN.exprs 

	ID  shift 49
	NUMBER  shift 51
	LEFT_PAREN  shift 62
	LEFT_BRACKET  shift 58
	LEFT_BRACE  shift 59
	STRING  shift 54
	QUOTED_STRING  shift 50
	MULTILINE_STRING  shift 55
	ADD  shift 63
	SUB  shift 64
	NOT  shift 65
	DOT  shift 66
	TRUE  shift 52
	FALSE  shift 53
	NIL  shift 56
	NULL  shift 57
	MAP  shift 67
	.  reduce 79 (src line 436)
